<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/ic_add_business_24"
        android:title="@string/menuitemaddlabel" />
    <item
        android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/ic_bar_chart_24"
        android:title="@string/menuitemRelatorioslabel" />
    <item
        android:id="@+id/item_2"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_home_filled_25"
        android:title="@string/menuitemhomelabel" />

    <item
        android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/menuitemlogoutlabel" />
</menu>
